# overlay

./: README.md  default.nix  flake.nix  overlays.nix  result
aws-es-proxy/: default.nix
babel/: default.nix
calico/: builder.sh  calico-ipam.nix  calico.nix  calicoctl.nix
cilium/: builder.sh  default.nix
cilium-cni/: builder.sh  default.nix
cni/: builder.sh  default.nix
curlify/: default.nix
fluentd-cloudwatch/: default.nix  gemset.nix
fluentd-custom/: Gemfile  gemset.nix
jruby-openssl/: 0.9.13.nix  default.nix
logstash-amazon-es/: Gemfile  shell.nix
nixops/: pyproject.toml  withplug.nix
nomad/: 0125.nix  101.nix  default.nix
pyswagger/: default.nix
webapp2/: default.nix
